--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/adminProfile.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/adminProfile.html
@@ -29,8 +29,8 @@
 
 <body class=" m-0 border-0 min-vh-100 d-flex flex-column">
 
-	<div class="wrapper container-fluid row min-vh-100">
-		<aside class="col-12 col-md-4 col-xxl-2 shadow">
+	<div class="wrapper container-fluid row min-vh-100 pe-0 me-0">
+		<aside class="col-12 col-md-3 col-xxl-2 shadow">
 
 			<h5 class="mt-1 p-2 border-3 border border-warning rounded-pill text-center"><i class="bi bi-arrow-down-right-square"></i> Menú de <span sec:authentication="principal.name">Usuario</span> <i class="bi bi-arrow-up-left-square"></i></h5>
 			<ul class="list-group list-group-flush">
@@ -42,9 +42,17 @@
 			</ul>
 
 		</aside>
-		<article class="col-12 col-md-8 col-xxl-10">
+		<article class="col-12 col-md-6 col-xxl-8">
+
+			<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae, doloremque quam laboriosam natus, laborum, necessitatibus autem impedit aspernatur possimus porro at alias quos rem a perspiciatis magnam corporis. Illo, et!</p>
 
 		</article>
+		<aside class="col-12 col-md-3 col-xxl-2 shadow pe-0">
+
+			<h5 class="mt-1 p-2 border-3 border border-warning rounded-pill text-center"><i class="bi bi-arrow-down-right-square"></i> Estadísticas del negocio <i class="bi bi-arrow-up-left-square"></i></h5>
+			
+
+		</aside>
 	</div>
 
 </body>
