Para testear en casa

--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/adminHeader.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/adminHeader.html
@@ -51,7 +51,7 @@
                                 <a class="nav-link" href="">¿Quiénes&nbsp;somos?</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/#products" th:href="@{/#products}">
+                                <a class="nav-link" href="/home/services" th:href="@{/home/services}">
                                     Servicios
                                 </a>
                             </li>
