--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/productsList.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/productsList.html
@@ -6,9 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Criterios SEO-->
-    <title>Quiérete Mucho | Peluquería y estética</title>
-    <meta name="description" content="Portada principal de la peluquería y centro de estética,
-    Quiérete Mucho, ¿Cuánto te vas a querer hoy...?">
+    <title>Quiérete Mucho | Servicios</title>
+    <meta name="description" content="Listado de servicios de la página web Quiérete Mucho.">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -35,52 +34,24 @@
 
 <body class=" m-0 border-0 min-vh-100 d-flex flex-column">
 
-    <!--Carousel-->
-
-    <div id="carouselHome" class="carousel slide container-fluid px-0" data-bs-ride="carousel">
-
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselHome" data-bs-slide-to="0" class="active" aria-current="true"
-                aria-label="Slide 1">
-            </button>
-            <button type="button" data-bs-target="#carouselHome" data-bs-slide-to="1" aria-label="Slide 2">
-            </button>
-            <button type="button" data-bs-target="#carouselHome" data-bs-slide-to="2" aria-label="Slide 3">
-            </button>
-        </div>
-
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="../static/img/carousel-1.png" th:src="@{/img/carousel-1.png}" alt="Fotografías de peinados originales del negocio, con el logo del negocio como marca de agua" class="d-block w-100">
-            </div>
-            <div class="carousel-item">
-                <img src="../static/img/carousel-2.png" th:src="@{/img/carousel-2.png}" alt="Fotografías de peinados originales del negocio, con el logo del negocio como marca de agua" class="d-block w-100">
-            </div>
-            <div class="carousel-item">
-                <img src="../static/img/carousel-3.png" th:src="@{/img/carousel-3.png}" alt="Fotografías de peinados originales del negocio, con el logo del negocio como marca de agua" class="d-block w-100">
-            </div>
-        </div>
-
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselHome" data-bs-slide="prev">
-            <span class="" aria-label="true"><i class="bi bi-arrow-bar-left fs-1"></i></span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselHome" data-bs-slide="next">
-            <span class="" aria-label="true"><i class="bi bi-arrow-bar-right fs-1"></i></span>
-        </button>
-
-    </div>
-
-    <!--Fin carousel-->
-
     <div class="container-fluid" id="products">
 		
-		<h2 class="text-center mx-auto mt-2 pt-2">Aquí tienes nuestros servicios más vendidos</h2>
+		<h2 class="text-center mx-auto mt-2 pt-2">Éstos son nuestros servicios</h2>
+
+        <form th:action="@{/home/services/search}" method="GET">
+            <div class="input-group">
+                <input class="form-control me-2" type="search" placeholder="Buscar por nombre o descripción" aria-label="Search"
+                    name="search">
+                <button class="btn btn-success" type="submit">Buscar</button>
+            </div>
+        </form>
+
 		
         <div class="row d-flex mx-auto">
 			
 			<div th:each="product : ${productList}" class="mx-1 card d-flex mx-auto border-0 rounded-2 m-3 col-lg-3 col-12 col-md-6 shadow"
-			    style="width: 18rem;" data-aos="flip-left" data-aos-once="false">
-				<!-- <img class="card-img-top mt-3 rounded-3" src="http://placehold.co/500x500" th:src="${product.descImg}" alt="Card image cap"> -->
+                style="width: 18rem;" data-aos="flip-left" data-aos-once="false">
+                <!-- <img class="card-img-top mt-3 rounded-3" src="http://placehold.co/500x500" th:src="${product.descImg}" alt="Card image cap"> -->
                 <img class="card-img-top mt-3 rounded-3" th:src="${not (#strings.isEmpty(product.descImg))} ? ${product.descImg} : 'http://placehold.co/500x500'" th:alt="${product.alterText}" />
                     
                 <div class="card-body p-3 d-flex flex-column">
@@ -97,13 +68,6 @@
 			</div>
 			
         </div>
-
-        <div class="row d-flex mx-auto justify-content-center mb-3">
-
-            <a href="/home/services" th:href="@{/home/services}" class="col-4 col-md-3 col-lg-2 p-1 container row text-decoration-none"><button class="btn btn-success col-12" type="button">Mostrar más</button></a>
-    
-        </div>
-
     </div>
 
 </body>
