--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/appointmentList.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/appointmentList.html
@@ -46,7 +46,8 @@
                         <th class="col-2 text-center">Pagado</th>
                         <th class="col-2 text-center">Precio</th>
 						<th class="col-2 text-center">Cliente</th>
-                        <th class="col-2 text-center">Detalles</th>
+                        <th class="col-1 text-center">Detalles</th>
+                        <th class="col-1 text-center">Borrar</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -56,7 +57,30 @@
                         <td class="col-2 text-center" th:text="${(appointment.paid) ? 'Pagado' : 'No pagado'}">Pagado</td>
                         <td class="col-2 text-center" th:text="${#numbers.formatDecimal(appointment.fullPrice,0,2)}">Precio</td>
                         <td class="col-2 text-center" th:text="${appointment.client.name} + ' ' + ${appointment.client.userLastName}">Cliente</td>
-                        <td class="col-2 text-center"><a th:href="@{/admin/appointmentDetails/{id}(id=${appointment.id})}"><button class="btn btn-primary p-1"><i class="bi bi-info-circle"></i></button></a></td>
+                        <td class="col-1 text-center"><a th:href="@{/admin/appointmentDetails/{id}(id=${appointment.id})}"><button class="btn btn-primary p-1"><i class="bi bi-info-circle"></i></button></a></td>
+                        <td class="col-1 text-center"><button class="btn btn-danger p-1" data-bs-toggle="modal" data-bs-target="#delete-modal" th:attr="data-bs-target='#delete-modal'+${appointment.id}"><i class="bi bi-trash3"></i></button></td>
+
+                        <!--Modal de confirmación de borrado-->
+                        <div class="modal fade" th:attr="id='delete-modal'+${appointment.id}" role="dialog">
+                            <div class="modal-dialog" role="document" th:attr="id='delete-modal'+${appointment.id}">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h4 class="modal-title">Borrar cita</h4>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" aria-hidden="true"></button>
+                                    </div>
+                                    <div class="modal-body container">
+                                        <div class="row">
+                                            <p>Pulsando el botón <span class="fw-bold">"Sí"</span> eliminará ésta cita de forma permanente, ¿está seguro?</p>
+                                        </div>
+                                        <div class="row justify-content-center">
+                                            <button type="button" class="btn shadow border border-1 border-success col-2 mx-2" data-bs-dismiss="modal">No</button>
+                                            <a class="btn shadow border border-1 border-danger px-3 col-2 mx-2" th:attr="href='/admin/appointmentList/delete/'+${appointment.id}">Sí</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!--Modal de confirmación de borrado-->
 
                     </tr>
                 </tbody>
