--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/register.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/register.html
@@ -19,7 +19,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-	<!--<script src="../static/js/regValidation.js" th:src="@{/js/regValidation.js}" defer></script>	-->
+	
 
 </head>
 
@@ -35,14 +35,6 @@
 		<div class="row justify-content-center">
 			<div class="alert alert-danger alert-dismissible fade show col-12 col-md-6" role="alert">
 				¡Vaya! Parece que el nombre de usuario está siendo utilizado.
-				<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-			</div>
-		</div>
-	</div>
-	<div class="container d-none" id="alertFormNotValid">
-		<div class="row justify-content-center">
-			<div class="alert alert-danger alert-dismissible fade show col-12 col-md-6" role="alert">
-				¡Vaya! Lo sentimos, pero parece que los datos no son los esperados.
 				<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 			</div>
 		</div>
@@ -86,7 +78,7 @@
 	            <div class="row">
 	
 	                <div class="my-1 col-12 col-md-6">
-	                    <label for="password" class="form-label" th:unless="${adminEditing}">Contraseña<sup class="text-danger">*</sup></label>
+	                    <label for="password" class="form-label" th:unless="${adminEditing}">Contraseña<sup class="text-danger">*</sup><sup class="text-danger d-none" id="notTheSamePass">Las contraseñas no coinciden</sup></label>
 						<div class="input-group">
 							<input class="form-control p-2" id="password" placeholder="************"
 							name="password" th:field="*{password}" required th:type="${pass}">
@@ -108,7 +100,7 @@
 	            <div class="row">
 	
 	                <div class="mb-1 col-12">
-	                    <label for="email" class="form-label">Email<sup class="text-danger">*</sup></label>
+	                    <label for="email" class="form-label">Email<sup class="text-danger">*</sup><sup class="text-danger d-none" id="invalidMail">Introduzca un email válido.</sup></label>
 	                    <input type="email" class="form-control p-2" id="email"
 	                        placeholder="correo@email.com" name="email" th:field="*{email}" required>
 	                </div>
@@ -118,8 +110,8 @@
 	            <div class="row">
 	
 	                <div class="my-1 col-12 col-md-4">
-	                    <label for="ntelf-field-reg" class="form-label">Número de teléfono<sup class="text-danger">*</sup></label>
-	                    <input type="text" class="form-control p-2" id="ntelf-field-reg" placeholder="ej: 555777888"
+	                    <label for="ntelf-field-reg" class="form-label">Número de teléfono<sup class="text-danger">*</sup><sup class="text-danger d-none" id="invalidTelf">Introduzca un número de 8 dígitos o más.</sup></label>
+	                    <input type="text" class="form-control p-2" id="ntelf" placeholder="ej: 555777888"
 	                        name="ntelf-reg" th:field="*{telNumber}" required>
 	                </div>
 	
@@ -142,15 +134,17 @@
 	                    Iniciar sesión
 	                </button>
 	            </a>
-	            <button type="submit" name="submitButton" class="col-6 btn fondo shadow py-2 rounded-2 mx-0 ">Crear cuenta</button>
+	            <button type="submit" value="Submit" id="submitButton" class="col-6 btn fondo shadow py-2 rounded-2 mx-0 ">Crear cuenta</button>
 	        </div>
 			<div class="mt-4 row justify-content-center" th:if="${adminEditing}">
 
-				<button type="submit" name="submitButton2" class="col-5 col-xl-3 btn fondo shadow py-2 rounded-2 mx-0 text-center">Editar cuenta</button>
+				<button type="submit" value="Submit" name="submitButton2" class="col-5 col-xl-3 btn fondo shadow py-2 rounded-2 mx-0 text-center">Editar cuenta</button>
 
 			</div>
 	
 	    </form>
+
+	<script src="../static/js/register.js" th:src="@{/js/register.js}" defer></script>
 
 </body>
 
