--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/login.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/login.html
@@ -30,7 +30,7 @@
 
 <body class=" m-0 border-0 min-vh-100 d-flex flex-column">
 
-	<form method="POST" th:action="@{/login}" class="py-5 my-auto mx-auto w-75">
+	<form method="POST" th:action="@{/login}" class="py-5 my-auto mx-auto w-75" id="login">
 	
 	       <legend class="text-center mb-3 fw-lighter">Inicio de sesión</legend>
 	
@@ -44,24 +44,28 @@
 	
 	               <div class="my-1 col-12 col-lg-6">
 	                   <label for="pwd-field-log" class="form-label">Contraseña</label>
-	                   <input type="password" class="form-control p-2" id="password" placeholder="************"
-	                       name="password">
+	                   <div class="input-group">
+						<input class="form-control p-2" id="password" placeholder="************"
+							name="password" required type="password">
+							<div class="input-group-text" th:unless="${adminEditing}"><i class="bi bi-eye"></i></div>
+						</div>
 	               </div>
 	           </div>
 	
 	       </div>
 	
-	       <div class="mt-4 row">
-	           <a class="text-decoration-none col-6" href="/regform/" th:href="@{/regform/}" target="_self">
-	               <button type="button" class="btn fondo shadow py-2 rounded-2 mx-0 text-secondary fw-bolder w-100">
+	       <div class="mt-4 row justify-content-center">
+	           <a class="text-decoration-none col-6 col-lg-4" href="/regform/" th:href="@{/regform/}" target="_self">
+	               <button type="button" class="btn fondo shadow py-2 rounded-2 mx-0 text-secondary fw-bolder w-100 fw-bold">
 	                   Crear cuenta
 	               </button>
 	           </a>
-			   <input type="submit" value="Iniciar sesión" class="col-6 btn fondo shadow py-2 rounded-2 mx-0 "></input>
+			   <input type="submit" value="Iniciar sesión" class="fw-bold col-6 col-lg-4 btn fondo shadow py-2 rounded-2 mx-0 "></input>
 	       </div>
 	
 	   </form>
 
+	   <script src="../static/js/login.js" th:src="@{/js/login.js}" defer></script>
 
 </body>
 
