--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/myAppointments.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/myAppointments.html
@@ -66,7 +66,7 @@
                         <th class="col-3 text-center">Fecha</th>
                         <th class="col-2 text-center">Pagado</th>
                         <th class="col-3 text-center">Precio</th>
-                        <th class="col-1 text-center">Editar</th>
+                        <th class="col-1 text-center">Detalles</th>
                         <th class="col-1 text-center">Borrar</th>
                     </tr>
                 </thead>
@@ -76,7 +76,7 @@
                         <td class="col-3 text-center" th:text="${#temporals.format(appointment.appointmentDate)}">Fecha</td>
                         <td class="col-2 text-center" th:text="${(appointment.paid) ? 'Pagado' : 'No pagado'}">Pagado</td>
                         <td class="col-3 text-center" th:text="${#numbers.formatDecimal(appointment.fullPrice,0,2)}">Precio</td>
-                        <td class="col-1 text-center"><a th:href="@{/userMenu/myAppointments/edit/}"><button class="btn btn-primary p-1"><i class="bi bi-pencil-square"></i></button></a></td>
+                        <td class="col-1 text-center"><a th:href="@{/userMenu/appointmentDetails/{id}(id=${appointment.id})}"><button class="btn btn-primary p-1"><i class="bi bi-info-circle"></i></button></a></td>
                         <td class="col-1 text-center"><button class="btn btn-danger p-1" data-bs-toggle="modal" data-bs-target="#delete-modal" th:attr="data-bs-target='#delete-modal'+${appointment.id}"><i class="bi bi-trash3"></i></button></td>
 
                         <!--Modal de confirmación de borrado-->
