--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/adminHeader.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/adminHeader.html
@@ -56,7 +56,7 @@
                                 </a>
                             </li>
                             <li class="nav-item" sec:authorize="!hasRole('ROLE_ADMIN')">
-                                <a class="nav-link" href="/reportForm" th:href="@{/reportForm}">Reclamaciones</a>
+                                <a class="nav-link" href="/reportForm/" th:href="@{/reportForm/}">Reclamaciones</a>
                             </li>
                         </ul>
     
