--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/header.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/header.html
@@ -56,7 +56,7 @@
 								</a>
 							</li>
 							<li class="nav-item" sec:authorize="isAuthenticated()">
-								<a class="nav-link" href="/reportForm" th:href="@{/reportForm}" sec:authorize="!hasRole('ROLE_ADMIN')">Reclamaciones</a>
+								<a class="nav-link" href="/reportForm/" th:href="@{/reportForm/}" sec:authorize="!hasRole('ROLE_ADMIN')">Reclamaciones</a>
 							</li>
 						</ul>
 	
