--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/footer.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/footer.html
@@ -123,7 +123,7 @@
 	        <!-- Copyright -->
 	        <div class="text-center p-md-3 p-2 border-top border-">
 	            © 2020 Derechos reservados:
-	            <a class="text-reset fw-bold" href="../avisolegal/avisolegal.html">Quiérete Mucho.</a>
+	            <a class="text-reset fw-bold" href="/home/advertisement" th:href="@{/home/advertisement}">Quiérete Mucho.</a>
 	        </div>
 	        <!-- Copyright -->
 	
