--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/adminHeader.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/fragments/adminHeader.html
@@ -48,7 +48,7 @@
     
                         <ul class="navbar-nav me-0 ms-auto text-center">
                             <li class="nav-item">
-                                <a class="nav-link" href="">¿Quiénes&nbsp;somos?</a>
+                                <a class="nav-link" href="/home/aboutUs" th:href="@{/home/aboutUs}">¿Quiénes&nbsp;somos?</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/home/services" th:href="@{/home/services}">
