--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/clientListui.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/clientListui.html
@@ -29,6 +29,8 @@
 
 <body class=" m-0 border-0 min-vh-100 d-flex flex-column">
 
+	<a th:href="@{/admin/}" class="d-block mx-auto mt-3"><button class="btn btn-success m-2">Volver al inicio</button></a>
+
 	<a href="/regform" th:href="@{/regform}" class="d-block mx-auto mt-3"><button
 			class="btn btn-success m-2">Agregar cliente</button></a>
 
