--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/appointmentDetails.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/appointmentDetails.html
@@ -54,7 +54,7 @@
                 <td class="col-1 text-center mt-0"></td>
                 <td class="col-5 text-center mt-0"></td>
                 <td class="col-2 text-center mt-0">Total:</td>
-                <td class="col-2 text-center mt-0"><span th:text="${appointFullPrice}"></span>€</td>
+                <td class="col-2 text-center mt-0"><span th:text="${#numbers.formatDecimal(appointFullPrice,0,2)}"></span>€</td>
             </tr>
         </tfoot>
     </table>
