--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/productsList.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/productsList.html
@@ -60,7 +60,7 @@
                         Texto de descripcion.
                     </p>
                     <div class="d-flex flex-column mt-auto mb-0">
-                        <p class="text-end">PVP: <span th:text="${product.basePrice}">precio</span>€</p>
+                        <p class="text-end">PVP: <span th:text="${#numbers.formatDecimal(product.basePrice,0,2)}">precio</span>€</p>
                         <a th:href="@{/loggedUser/myAppointments/add/{id}(id=${product.id})}" sec:authorize="isAuthenticated()" class="btn btn-success rounded-2">Pide cita</a>
                         <a href="/login" th:href="@{/login}" sec:authorize="!isAuthenticated()" class="btn btn-warning rounded-2">Inicia sesión</a>
                     </div>
