error en la ruta de agregar cliente desde el menu admin

--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/clientListui.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/adminTemplates/clientListui.html
@@ -31,7 +31,7 @@
 
 	<a th:href="@{/admin/}" class="d-block mx-auto mt-3"><button class="btn btn-success m-2">Volver al inicio</button></a>
 
-	<a href="/regform" th:href="@{/regform}" class="d-block mx-auto mt-3"><button
+	<a href="/regform/" th:href="@{/regform/}" class="d-block mx-auto mt-3"><button
 			class="btn btn-success m-2">Agregar cliente</button></a>
 
 	<div class="container" th:if="${param.error}">
