--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/myReports.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/myReports.html
@@ -48,7 +48,16 @@
             <div class="container" th:if="${param.error}">
                 <div class="row justify-content-center mt-4">
                     <div class="alert alert-danger alert-dismissible fade show col-12 col-md-8" role="alert">
-                        ¡Vaya! Parece que estas intentando editar una reclamacion de la cual no eres propietario.
+                        ¡Vaya! Parece que estas intentando editar una reclamación de la cual no eres propietario.
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="container" th:if="${param.errorDelete}">
+                <div class="row justify-content-center mt-4">
+                    <div class="alert alert-danger alert-dismissible fade show col-12 col-md-8" role="alert">
+                        ¡Vaya! Parece que estas intentando editar una reclamación de la cual no eres propietario.
                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                     </div>
                 </div>
