se agrega el documento de ayuda para la correción de la parte de LMSGI

--- a/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/aboutUs.html
+++ b/CarrascalFrancoJoaquin_ProyectoSpring_t2/src/main/resources/templates/aboutUs.html
@@ -50,11 +50,11 @@
 
         <article>
 
-            <h3 class="text-center fw-bold"><span class="mov"></span></h3>
+            <h1 class="text-center fw-bold fs-6"><span class="mov"></span></h1>
 
             <div class="row justify-content-center mt-5">
 
-                <img class="col-10 col-md-5 col-xxl-3 rounded-2" src="../static/img/sobre-nosotros.jpg" th:src="@{/img/sobre-nosotros.jpg}" alt="Logo de la empresa Quiérete Mucho">
+                <img class="col-10 col-md-5 col-xxl-3 rounded-2" src="../static/img/sobre-nosotros.jpg" th:src="@{/img/sobre-nosotros.jpg}" alt="Trabajadoras de la empresa Quiérete Mucho, izquierda Elena derecha Rocío">
                 
                 <div class="col-10 col-md-6 col-xxl-4 my-4">
                     <h3 class="text-center fw-bold">Sobre nosotros</h3>
@@ -83,7 +83,7 @@
 
             <div class="row justify-content-center mt-5">
 
-                <img class="col-10 col-md-11 col-xxl-7 rounded-2" src="../static/img/foto-logo-original.jpg" th:src="@{/img/foto-logo-original.jpg}" alt="Logo de la empresa Quiérete Mucho">
+                <img class="col-10 col-md-11 col-xxl-7 rounded-2" src="../static/img/foto-logo-original.jpg" th:src="@{/img/foto-logo-original.jpg}" alt="Cartel del logo de la empresa Quiérete Mucho, colocado encima de la puerta principal">
 
                 <div class="col-10 col-md-11 col-xxl-7 my-4">
 
